--- a/css/resposive.css
+++ b/css/resposive.css
@@ -5,17 +5,6 @@
   --bg-color: #f9f9f9;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 /*------------------ navbar------------ */
 
 @media (max-width: 768px) {
@@ -32,6 +21,7 @@
     justify-content: space-between;
     align-items: center;
   }
+
   .nav-items li,
   .nav-items .btn {
     width: 100%;
@@ -40,6 +30,7 @@
     font-size: 11px;
     /* gap: px; */
   }
+
   .nav-items {
     display: flex;
     gap: 10px;
@@ -52,11 +43,13 @@
     margin: -30px 0px;
     white-space: nowrap;
   }
+
   .logo {
     font-size: 20px;
     padding: 0px;
   }
 }
+
 @media (max-width: 480px) {
   .navbar {
     flex-direction: row;
@@ -100,19 +93,6 @@
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*----------------- ::content--------------- */
 
 @media (max-width: 768px) {
@@ -131,16 +111,19 @@
     line-height: 26px;
     margin-top: -100px;
   }
+
   .txt2 {
     font-size: 20px;
     line-height: 22px;
     margin-top: -30px;
   }
+
   .information {
     font-size: 12px;
     text-align: left;
-    text-align: justify; 
- }
+    text-align: justify;
+  }
+
   .ex-btn {
     padding: 7px 10px;
     background-color: var(--secondary-color);
@@ -149,6 +132,17 @@
     border-radius: 7px;
     font-weight: 700;
     font-size: 12px;
+  }
+  .success-message {
+    grid-column: span 1;
+    margin-top: 20px;
+    padding: 15px;
+    background-color: var(--text-color);
+    color: var(--main-color);
+    border-radius: 12px;
+    font-weight: 600;
+    text-align: center;
+    display: none;
   }
 }
 
@@ -162,30 +156,29 @@
     line-height: 26px;
     margin-top: -30px;
   }
+
   .txt2 {
     font-size: 16px;
     line-height: 20px;
     margin-top: -30px;
   }
+
   .information {
     font-size: 10px;
-   text-align: justify;
+    text-align: justify;
+  }
+  .success-message {
+    grid-column: span 1;
+    margin-top: 20px;
+    padding: 15px;
+    background-color: var(--text-color);
+    color: var(--main-color);
+    border-radius: 12px;
+    font-weight: 600;
+    text-align: center;
+    display: none;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*--------------- contact us---------- */
 @media (max-width: 768px) {
@@ -222,27 +215,21 @@
     color: var(--secondary-color);
     padding: 10px;
   }
+
   .submit-btn {
     font-size: 12px;
     padding: 10px 20px;
   }
 }
 
-
-
-
-
-
-
-
-
 /*------------ my image ------------- */
 @media (max-width: 480px) {
   .responsive-img {
     max-width: 100%;
-        display: block;
+    display: block;
   }
 }
+
 @media (max-width: 768px) {
   .responsive-img {
     max-width: 180%;
